# codec-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  default.nix  main.cpp  shell.nix  tests.cpp
include/: buffer.hpp  codec.hpp  frame.hpp  huffman.hpp
src/: buffer.cpp  codec.cpp  frame.cpp  huffman.cpp
